fix layout on ios

--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -4,7 +4,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    top: 10%;
+    top: 5%;
     padding-left: 5%;
     padding-right: 5%;
 }
